# pyautossh

./: .gitignore  .pre-commit-config.yaml  README.md  pyautossh.py  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  publish.yaml
src/pyautossh/: __main__.py  cli.py  exceptions.py  process_invoker.py  pyautossh.py  retry_policy.py
tests/: test_cli.py  test_pyautossh.py
