[project]
name = "pyautossh"
description = "Automatically reconnect SSH sessions"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = "MIT"
license-file = ["LICENSE"]
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[project.scripts]
pyautossh = "pyautossh.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
exclude = ["tests"]
